# puerto-rico-legislation

./: readme.md
httpd/: Cargo.toml
httpd/src/: main.rs
output/: index.html  measures.en.json  measures.es.json
output/measures/: P C0001.en.html  P C0001.en.json  P C0001.en.md  P C0001.es.html  P C0001.es.json  P C0001.es.md
pr-legislation/: Cargo.toml  measures.en.json  measures.json  readme.md
pr-legislation/src/: main.rs
render/: Cargo.toml
render-html/: Cargo.toml
render-html/src/: main.rs
render/src/: main.rs
render/templates/: index.stpl  measures.stpl  measures_md.stpl
scrape/: Cargo.toml
scrape/src/: main.rs
translate/: Cargo.toml
translate/src/: main.rs
