[package]
name = "httpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Example, use the version numbers you need
tide = "0.16.0"
async-std = { version = "1.11.0", features = ["attributes"] }
serde = { version = "1.0.136", features = ["derive"] }